--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 # import.meta.env.VITE_API_URL
-VITE_API_URL=http://localhost:5000
+# VITE_API_URL=http://localhost:5000
 REACT_APP_API_URL=https://merned-a83b.onrender.com
 
